# Killswitch-Engage

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  VALIDATION_REPORT.md  docker-compose.yml  host.txt  project_evolution.txt  pyproject.toml  remake_graficos.ipynb
.github/workflows/: docker-publish.yml
.txt/: DECISOES_TECNICAS.txt  EXPERIMENT_REPORT.txt  RESULTADOS_3_MODOS.txt  RESULTADOS_TESTES.txt  SECURITY_CHECKLIST.txt  project_evolution.txt  📊 ESTADO ATUAL DO KILLSWITCH ENGAG.txt  📚 KILLSWITCH ENGAGE.txt
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/tests/: test_jogos.py  test_security.py  test_usuarios.py
docs/: README_POPULATE.md  REVISAO_TECNICA.md  requirements_legacy.txt
reports/: CGAN_DOCUMENTATION.md  CGAN_VALIDATION.md  DECISOES_TECNICAS.md  DOCUMENTACAO_CGAN.md  SECURITY_AUDIT_REPORT.md  TECHNICAL_DECISIONS.md  cGAN_PRODUCTION_READY.md  cGAN_VALIDACAO.md  walkthrough.md.resolved
reports/insights/: 09a_xAI_price_vs_category_ranked_table.md  cgan_meta_usuario.md  coverage_projection.md  multivariate_insights.md  multivariate_report.txt  quality_assurance_report.json
reports/models/: VALIDATION_REPORT.md  insights_recomendacao.md
scripts/: train_layer1_classifier.py  train_layer2_clustering.py  train_layer3_ranker.py  verify_recommendation.py
scripts/analysis/: coverage_regression.py
scripts/experimentation/: EXPERIMENT_REPORT.md  ablation.py  ablation_study.md  error_analysis.md  error_analysis.py  hyperparameter_tuning.md  mlflow_config.py  mlflow_experiments.db  offline_metrics.py  online_metrics.py  optimization.py  run_experiments.py
scripts/meta_learning/: build_cgan_dataset.py  cgan_model.py  config_cGAN.yaml  ground_truth_val.py  hyperparameter_analysis.md  mass_validation.py  train_cgan.py
scripts/remakes/: 01_achievements_retention.py  01b_xAI_achievements_retention_table.py  02_confusion_matrices.py  03_correlation_matrix.py  04_coverage_scalability.py  05_playtime_genre_boxplot.py  06_popularity_volume_power_law.py  07_precision_recall_curve.py  08_price_category_boxplot.py  08b_xAI_price_category_split.py  09_price_vs_score_violin.py  09a_xAI_price_vs_score_table.py  09b_xAI_price_vs_score_table_img.py  10_genres_imputation_confidence.py  11_generate_notebook.py  12_anova_category_score_violin.py  17_training_curves.py  (+7 more)
src/: config_paths.py
tests/: conftest.py  test_cgan_integration.py
(+51 files in other folders)
